# sentinel

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
docs/: HANDOFF.md  pdm-agent-design.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/ideas/: real-environment-simulator.md
docs/learning/: 01-ds-core.md  02-agent-layer.md  03-resumable-and-api.md  04-agentic-ds.md  05-harness-engineering.html  06-sse-vs-websockets.html
docs/superpowers/plans/: 2026-07-04-dashboard-mvp.md  2026-07-05-v1-resumable-api.md  2026-07-06-v2-agentic-ds.md  2026-07-09-agent-ui.md  2026-07-11-agent-harness-middleware.md
docs/superpowers/specs/: 2026-07-04-dashboard-mvp-design.md  2026-07-05-v1-resumable-api-design.md  2026-07-06-v2-agentic-ds-design.md  2026-07-09-agent-ui-design.md  2026-07-11-agent-harness-middleware.md
sentinel/: __init__.py  config.py  pipeline.py
sentinel/agents/: __init__.py  __main__.py  agent.py  context.py  domain_context.py  graph.py  harness.py  interviewer.py  monitor.py  registry.py  report_writer.py  state.py  tools.py  training.py
sentinel/api/: __init__.py  app.py  presentation.py
sentinel/core/: __init__.py  automl.py  data.py  features.py
sentinel/dashboard/: __init__.py  app.py  runner.py
sentinel/llm/: __init__.py  provider.py
tests/: conftest.py  fakes.py  test_agent.py  test_agents.py  test_api.py  test_cli.py  test_config.py  test_context_projection.py  test_core_helpers.py  test_dashboard_app.py  test_dashboard_runner.py  test_domain_context.py  test_harness.py  test_interviewer_state.py  test_presentation.py  test_prompts.py  test_provider.py  test_registry.py  test_report_writer.py  test_tools.py  test_train_one.py  test_train_state.py
web/: README.md  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  styles.css
web/src/api/: client.ts  sse.test.ts  sse.ts  types.ts
web/src/components/: AutonomyToggle.tsx  ChatView.tsx  ConfirmCard.tsx  Icon.tsx  LeaderboardPanel.test.tsx  LeaderboardPanel.tsx  Message.test.tsx  Message.tsx  SessionSidebar.tsx
web/src/state/: useSession.test.ts  useSession.ts  useStream.ts
