[project]
name = "sentinel"
version = "0.1.0"
description = "Deterministic DS core for C-MAPSS FD001 Remaining Useful Life prediction (Milestone 1 of the Sentinel predictive-maintenance project)."
readme = "README.md"
# PyCaret is version-sensitive: it pins an older scikit-learn and needs
# Python ~3.9-3.11. Pinned to 3.11, which is the version verified end-to-end.
requires-python = ">=3.11,<3.12"
dependencies = [
    "pycaret==3.3.2",
    "scikit-learn==1.4.2",
    "pandas==2.1.4",
    "numpy==1.26.4",
    "langgraph>=1.2.7",
    "anthropic>=0.116.0",
    "groq>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# pyflakes (F) + pycodestyle (E) are on by default; add isort (I) for import order.
extend-select = ["I"]
